--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Ice Crusher</string>
+    <string name="app_name">Iceberg Crusher</string>
     <string name="main_activity_app_name">ICEBERG CRUSHER</string>
     <string name="results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
     <string name="reset_game">Reset Game</string>
     <string name="win">You win!</string>
-    <string name="play">Play</string>
+    <string name="play">PLAY</string>
     <string name="high_score">High Score: </string>
     <string name="crushed">Crushed: </string>
     <string name="missed">Missed: </string>
